--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   ],
   "require": {
     "php": ">=5.5",
-    "ext-gd": "*"
+    "ext-gd": "*",
+    "twig/twig": "^3.0"
   },
   "autoload": {
     "files": [ "wire/core/ProcessWire.php" ]
