--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "site/modules/RockFrontend"]
 	path = site/modules/RockFrontend
 	url = git@github.com:baumrock/RockFrontend.git
+[submodule "site/modules/RockMigrations"]
+	path = site/modules/RockMigrations
+	url = git@github.com:baumrock/RockMigrations.git
